fix verification text color and alignment

--- a/src/app/styles/theme/theme.less
+++ b/src/app/styles/theme/theme.less
@@ -189,3 +189,6 @@ footer {
   margin-top: @line-height-computed;
   margin-bottom: @line-height-computed;
 }
+.alert-warning > a {
+  color: @alert-warning-text;
+}
